# Blue-Enviroment

./: README.md  install.sh  wayfire.desktop  wayfire.ini
plugins/: meson.build
plugins/blue-launcher/: blue-launcher.cpp  blue-launcher.hpp  blue_launcher_utils.cpp  blue_launcher_utils.hpp  index.html  meson.build  server.js  styles.css
plugins/blue-panel/: CMakeLists.txt
plugins/blue-panel/backend/: app_parser.cpp  app_parser.hpp  config_manager.cpp  config_manager.hpp  dbus_manager.hpp  logger.hpp  main.cpp  system_status.cpp  system_status.hpp  thread_pool.hpp  utils.hpp  wayland_layer_shell.cpp  wayland_layer_shell.hpp  webview_bridge.cpp  webview_bridge.hpp
plugins/blue-panel/fronted/: index.html  script.js  settings.js  style.css
plugins/blue-panel/fronted/theme/: dark.css  default.css  light.css
